# Raytracer

./: .gitignore  README.md  RapportStructure.md  Setup.md  Synthese.md
Benchmark/: Benchmark.xlsx  MixStructure.txt  MixStructure_2.txt  MixStructure_3.txt  MixStructure_4.txt  MixStructure_5.txt  NoStructure.txt  NoStructure_2.txt  NoStructure_3.txt  NoStructure_4.txt  NoStructure_5.txt  OnlyStructure.txt  OnlyStructure_2.txt  OnlyStructure_3.txt  OnlyStructure_4.txt  OnlyStructure_5.txt  benchmark.bat
Raytracer/: BVHNode.cpp  CMakeLists.txt  Light.h  PerspectiveCamera.h  Ray.h  Raytracer.cpp  Scene.cpp  SceneObject.h  SceneObjectType.h  Sphere.cpp
TP1/: README.md
TP1/Synthese_TP1/: CMakeLists.txt  Parachutist.cpp  Parachutist.h  Synthese_TP1.cpp  Synthese_TP1.h
TP2/: .gitignore
TP2/Benchmark/: benchmark.bat  result.txt
TP2/Synthese_TP2/: AABB.cpp  AABB.h  BVHNode.cpp  BVHNode.h  CMakeLists.txt  Camera.h  Light.h  OrthographicCamera.h  PerspectiveCamera.h  Ray.h  Scene.cpp  Scene.h  SceneObject.h  Sphere.cpp  Sphere.h  Synthese_TP2.cpp  Synthese_TP2.h
